--- a/test/extensions/dynamic_modules/test_data/c/BUILD
+++ b/test/extensions/dynamic_modules/test_data/c/BUILD
@@ -19,12 +19,6 @@ test_program(name = "abi_version_mismatch")
 
 test_program(name = "no_http_config_new")
 
-test_program(name = "http_filter_per_route_config_new_fail")
-
-test_program(name = "no_http_filter_per_route_config_new")
-
-test_program(name = "no_http_filter_per_route_config_destroy")
-
 test_program(name = "no_http_config_destroy")
 
 test_program(name = "no_http_filter_new")
@@ -44,3 +38,5 @@ test_program(name = "no_http_filter_response_headers")
 test_program(name = "no_http_filter_response_body")
 
 test_program(name = "no_http_filter_response_trailers")
+
+test_program(name = "test_callbacks")
