--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -93,6 +93,12 @@ bug_fixes:
     removed for requests matching the ``pass_through_matcher`` configuration. This broke setups with multiple OAuth2
     filter instances using different ``pass_through_matcher`` configurations, because the first matching instance removed
     the OAuth2 cookies--even when a passthrough was intended--impacting subsequent filters that still needed those cookies.
+- area: stats
+  change: |
+    Fixed a bug where the metric name ``expiration_unix_time_seconds`` of 
+    ``cluster.<cluster_name>.ssl.certificate.<cert_name>.<metric_name>`` 
+    and ``listener.<address>.ssl.certificate.<cert_name>.<metric_name>``
+    was not being properly extracted in the final prometheus stat name.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
