--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -183,7 +183,8 @@ new_features:
     during the metric flush.
 - area: tap
   change: |
-    Record the upstream connection information in the HTTP buffer trace output.
+    Add :ref:`record_upstream_connection <envoy_v3_api_field_extensions.filters.http.tap.v3.Tap.record_upstream_connection>`
+    to determine whether upstream connection information is recorded in the HTTP buffer trace output.
 - area: quic
   change: |
     Added new option to support :ref:`base64 encoded server ID
