--- a/test/extensions/tracers/zipkin/BUILD
+++ b/test/extensions/tracers/zipkin/BUILD
@@ -31,6 +31,7 @@ envoy_extension_cc_test(
         "//source/common/network:utility_lib",
         "//source/common/protobuf:utility_lib",
         "//source/common/runtime:runtime_lib",
+        "//source/extensions/tracers/common/utils:trace_lib",
         "//source/extensions/tracers/zipkin:zipkin_lib",
         "//test/mocks:common_lib",
         "//test/mocks/http:http_mocks",
