--- a/source/extensions/clusters/composite/BUILD
+++ b/source/extensions/clusters/composite/BUILD
@@ -1,6 +1,7 @@
 load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_extension",
+    "envoy_cc_library",
     "envoy_extension_package",
 )
 
@@ -8,21 +9,27 @@ licenses(["notice"])  # Apache 2
 
 envoy_extension_package()
 
-envoy_cc_extension(
-    name = "cluster",
-    srcs = [
-        "cluster.cc",
-    ],
-    hdrs = [
-        "cluster.h",
-        "lb_context.h",
-    ],
+envoy_cc_library(
+    name = "cluster_lib",
+    srcs = ["cluster.cc"],
+    hdrs = ["cluster.h"],
     deps = [
         "//envoy/upstream:cluster_manager_interface",
         "//envoy/upstream:load_balancer_interface",
         "//source/common/common:logger_lib",
         "//source/common/upstream:cluster_factory_lib",
-        "//source/common/upstream:load_balancer_factory_base_lib",
+        "//source/common/upstream:upstream_includes",
+        "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/clusters/composite/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_extension(
+    name = "config",
+    srcs = ["cluster.cc"],
+    hdrs = ["cluster.h"],
+    deps = [
+        ":cluster_lib",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/clusters/composite/v3:pkg_cc_proto",
     ],
