--- a/test/extensions/clusters/composite/BUILD
+++ b/test/extensions/clusters/composite/BUILD
@@ -15,24 +15,20 @@ envoy_extension_cc_test(
     name = "cluster_test",
     srcs = ["cluster_test.cc"],
     extension_names = ["envoy.clusters.composite"],
-    rbe_pool = "6gig",
     deps = [
-        "//source/extensions/clusters/composite:cluster",
-        "//source/extensions/load_balancing_policies/cluster_provided:config",
-        "//source/extensions/transport_sockets/raw_buffer:config",
+        "//source/common/singleton:manager_impl_lib",
+        "//source/common/upstream:cluster_factory_lib",
+        "//source/extensions/clusters/composite:cluster_lib",
         "//test/common/upstream:utility_lib",
-        "//test/mocks/http:conn_pool_mocks",
-        "//test/mocks/network:connection_mocks",
-        "//test/mocks/router:router_mocks",
-        "//test/mocks/server:factory_context_mocks",
-        "//test/mocks/stream_info:stream_info_mocks",
+        "//test/mocks/protobuf:protobuf_mocks",
+        "//test/mocks/server:admin_mocks",
+        "//test/mocks/server:instance_mocks",
+        "//test/mocks/ssl:ssl_mocks",
         "//test/mocks/upstream:cluster_manager_mocks",
-        "//test/mocks/upstream:cluster_mocks",
-        "//test/mocks/upstream:host_mocks",
         "//test/mocks/upstream:load_balancer_context_mock",
-        "//test/mocks/upstream:load_balancer_mocks",
-        "//test/mocks/upstream:priority_set_mocks",
         "//test/mocks/upstream:thread_local_cluster_mocks",
+        "//test/test_common:environment_lib",
+        "//test/test_common:simulated_time_system_lib",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/extensions/clusters/composite/v3:pkg_cc_proto",
     ],
@@ -43,13 +39,10 @@ envoy_extension_cc_test(
     size = "large",
     srcs = ["cluster_integration_test.cc"],
     extension_names = ["envoy.clusters.composite"],
-    rbe_pool = "6gig",
     deps = [
         "//source/common/config:protobuf_link_hacks",
         "//source/common/protobuf:utility_lib",
-        "//source/extensions/clusters/composite:cluster",
-        "//source/extensions/filters/network/tcp_proxy:config",
-        "//test/common/grpc:grpc_client_integration_lib",
+        "//source/extensions/clusters/composite:cluster_lib",
         "//test/config:v2_link_hacks",
         "//test/integration:http_integration_lib",
         "//test/integration:integration_lib",
@@ -57,7 +50,9 @@ envoy_extension_cc_test(
         "//test/test_common:network_utility_lib",
         "//test/test_common:resources_lib",
         "//test/test_common:utility_lib",
+        "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/clusters/composite/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/filters/network/http_connection_manager/v3:pkg_cc_proto",
     ],
 )
