docker/publishing: Minor fix
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/.github/workflows/_publish_release_container.yml
+++ b/.github/workflows/_publish_release_container.yml
@@ -95,7 +95,7 @@ jobs:
             architectures:
             - amd64
             - arm64
-            artifact-pattern: envoy-dev.{arch}.tar
+            artifact-pattern: envoy-debug.{arch}.tar
             additional-tags:
             - debug-dev-${{ github.sha }}
           - name: ${{ inputs.dockerhub-repo }}
