--- a/test/extensions/filters/http/ext_proc/BUILD
+++ b/test/extensions/filters/http/ext_proc/BUILD
@@ -43,6 +43,7 @@ envoy_extension_cc_test(
     tags = ["skip_on_windows"],
     deps = [
         ":mock_server_lib",
+        ":test_attribute_builder_lib",
         ":utils_lib",
         "//envoy/http:filter_interface",
         "//envoy/network:filter_interface",
@@ -69,6 +70,25 @@ envoy_extension_cc_test(
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/http/ext_proc/response_processors/save_processing_response/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/ext_proc/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_proto_library(
+    name = "test_attribute_builder_proto",
+    srcs = ["test_attribute_builder.proto"],
+)
+
+envoy_extension_cc_test_library(
+    name = "test_attribute_builder_lib",
+    srcs = ["test_attribute_builder.cc"],
+    hdrs = ["test_attribute_builder.h"],
+    extension_names = ["envoy.filters.http.ext_proc"],
+    deps = [
+        ":test_attribute_builder_proto_cc_proto",
+        "//source/common/protobuf:utility_lib",
+        "//source/extensions/filters/common/expr:evaluator_lib",
+        "//source/extensions/filters/http/ext_proc:matching_utils_lib",
+        "//source/extensions/filters/http/ext_proc/attribute_builder:attribute_builder_interface",
     ],
 )
 
