--- a/source/extensions/network/dns_resolver/getaddrinfo/BUILD
+++ b/source/extensions/network/dns_resolver/getaddrinfo/BUILD
@@ -12,6 +12,7 @@ envoy_cc_extension(
     name = "config",
     srcs = ["getaddrinfo.cc"],
     hdrs = ["getaddrinfo.h"],
+    visibility = ["//visibility:public"],
     deps = [
         "//envoy/network:dns_resolver_interface",
         "//envoy/registry",
