--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -318,6 +318,9 @@ new_features:
 - area: rbac
   change: |
     Switch the IP matcher to use LC-Trie for performance improvements.
+- area: tls_inspector
+  change: |
+    Added dynamic metadata when failing to parse the ``ClientHello``.
 - area: lua
   change: |
     Added ``route()`` to the Stream handle API, allowing Lua scripts to retrieve route information. So far, the only method
