Add dynamic metadata for TLS inspector filter errors (#40529)
Export dynamic metadata from the TLS inspector to provide more detailed
reason for subsequent extensions in case SNI could not be detected.

Signed-off-by: Elisha Ziskind <eziskind@google.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -22,5 +22,8 @@ removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
 
 new_features:
+- area: tls_inspector
+  change: |
+    Added dynamic metadata when failing to parse the ``ClientHello``.
 
 deprecated:
