--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -339,5 +339,9 @@ new_features:
     Added a new metric ``db_build_epoch`` to track the build timestamp of the Maxmind geolocation database files.
     This can be used to monitor the freshness of the databases currently in use by the filter.
     See https://maxmind.github.io/MaxMind-DB/#build_epoch for more details.
+- area: wasm
+  change: |
+    Added ``sign_signature`` foreign function to create cryptographic signatures.
+    See :ref:`Wasm foreign functions <arch_overview_wasm_foreign_functions>` for more details.
 
 deprecated:
