--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -84,7 +84,7 @@ bug_fixes:
     the router filter.
 - area: formatter
   change: |
-    Fixed a bug where the ``%TRACE_ID%`` command cannot works properly at the header mutations.
+    Fixed a bug where the ``%TRACE_ID%`` command cannot work properly at the header mutations.
 - area: listeners
   change: |
     Fixed issue where :ref:`TLS inspector listener filter <config_listener_filters_tls_inspector>` timed out
