--- a/test/extensions/tracers/zipkin/BUILD
+++ b/test/extensions/tracers/zipkin/BUILD
@@ -62,3 +62,18 @@ envoy_extension_cc_test(
         "@envoy_api//envoy/config/trace/v3:pkg_cc_proto",
     ],
 )
+
+envoy_extension_cc_test(
+    name = "w3c_propagator_integration_test",
+    srcs = ["w3c_propagator_integration_test.cc"],
+    extension_names = [
+        "envoy.tracers.zipkin",
+        "envoy.propagators.w3c",
+    ],
+    rbe_pool = "6gig",
+    deps = [
+        "//source/extensions/propagators/w3c:propagator_lib",
+        "//source/extensions/tracers/zipkin:zipkin_lib",
+        "//test/test_common:utility_lib",
+    ],
+)
