--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -1,17 +1,17 @@
-date: September 3, 2025
+date: Pending
+
+behavior_changes:
+# *Changes that are expected to cause an incompatibility if applicable; deployment changes are likely required*
+
+minor_behavior_changes:
+# *Changes that may cause incompatibilities for some users, but should not for most*
 
 bug_fixes:
-- area: oauth2
-  change: |
-    Fixed an issue where cookies prefixed with ``__Secure-`` or ``__Host-`` were not receiving a
-    Secure attribute.
-- area: dns
-  change: |
-    Fixed an UAF in DNS cache that can occur when the Host header is modified between the Dynamic Forwarding and Router
-    filters.
-- area: stats
-  change: |
-    Fixed a bug where the metric name ``expiration_unix_time_seconds`` of
-    ``cluster.<cluster_name>.ssl.certificate.<cert_name>.<metric_name>``
-    and ``listener.<address>.ssl.certificate.<cert_name>.<metric_name>``
-    was not being properly extracted in the final prometheus stat name.
+# *Changes expected to improve the state of the world and are unlikely to have negative effects*
+
+removed_config_or_runtime:
+# *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
+
+new_features:
+
+deprecated:
