--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -12,6 +12,9 @@ bug_fixes:
   change: |
     Fixed a bug where the ``response_headers_to_add`` may be processed multiple times for the local responses from
     the router filter.
+- area: release
+  change: |
+    Fix distroless image to ensure nonroot.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
