--- a/source/extensions/network/dns_resolver/getaddrinfo/BUILD
+++ b/source/extensions/network/dns_resolver/getaddrinfo/BUILD
@@ -12,7 +12,7 @@ envoy_cc_extension(
     name = "config",
     srcs = ["getaddrinfo.cc"],
     hdrs = ["getaddrinfo.h"],
-    visibility = ["//visibility:public"],
+    extra_visibility = ["//test:__subpackages__"],
     deps = [
         "//envoy/network:dns_resolver_interface",
         "//envoy/registry",
