adding cares library in BUILD file
Signed-off-by: Yanjun Xiang <yanjunxiang@google.com>

--- a/test/extensions/network/dns_resolver/cares/BUILD
+++ b/test/extensions/network/dns_resolver/cares/BUILD
@@ -46,6 +46,7 @@ envoy_cc_test(
     tags = ["fails_on_clang_cl"],
     deps = [
         "//source/extensions/clusters/dns:dns_cluster_lib",
+        "//source/extensions/network/dns_resolver/cares:config",
         "//test/integration:http_integration_lib",
     ],
 )
