--- a/source/extensions/tracers/skywalking/BUILD
+++ b/source/extensions/tracers/skywalking/BUILD
@@ -44,6 +44,7 @@ envoy_cc_library(
         "//source/common/http:header_map_lib",
         "//source/common/runtime:runtime_lib",
         "//source/common/tracing:http_tracer_lib",
+        "//source/extensions/propagators/skywalking:skywalking_propagator_lib",
         "@com_github_skyapm_cpp2sky//source:cpp2sky_data_lib",
         "@envoy_api//envoy/config/trace/v3:pkg_cc_proto",
     ],
