--- a/source/extensions/tracers/zipkin/BUILD
+++ b/source/extensions/tracers/zipkin/BUILD
@@ -54,6 +54,9 @@ envoy_cc_library(
         "//source/common/singleton:const_singleton",
         "//source/common/tracing:http_tracer_lib",
         "//source/common/upstream:cluster_update_tracker_lib",
+        "//source/extensions/propagators/b3/multi:b3_multi_propagator_lib",
+        "//source/extensions/propagators/b3/single:b3_single_propagator_lib",
+        "//source/extensions/propagators/w3c/tracecontext:tracecontext_propagator_lib",
         "//source/extensions/tracers/opentelemetry:opentelemetry_tracer_lib",
         "@com_github_openzipkin_zipkinapi//:zipkin_cc_proto",
         "@com_google_absl//absl/types:optional",
