--- a/test/extensions/tracers/zipkin/BUILD
+++ b/test/extensions/tracers/zipkin/BUILD
@@ -31,6 +31,9 @@ envoy_extension_cc_test(
         "//source/common/network:utility_lib",
         "//source/common/protobuf:utility_lib",
         "//source/common/runtime:runtime_lib",
+        "//source/extensions/propagators/b3/multi:b3_multi_propagator_lib",
+        "//source/extensions/propagators/b3/single:b3_single_propagator_lib",
+        "//source/extensions/propagators/w3c/tracecontext:tracecontext_propagator_lib",
         "//source/extensions/tracers/zipkin:zipkin_lib",
         "//test/mocks:common_lib",
         "//test/mocks/http:http_mocks",
