--- a/test/extensions/filters/http/wasm/test_data/BUILD
+++ b/test/extensions/filters/http/wasm/test_data/BUILD
@@ -134,6 +134,7 @@ envoy_cc_test_library(
         "//source/extensions/common/wasm:wasm_hdr",
         "//source/extensions/common/wasm:wasm_lib",
         "//source/extensions/common/wasm/ext:envoy_null_plugin",
+        "//source/extensions/common/wasm/ext:sign_cc_proto",
         "@com_google_absl//absl/container:node_hash_map",
         "@proxy_wasm_cpp_sdk//contrib:contrib_lib",
     ],
