--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -218,6 +218,10 @@ new_features:
     support evictable metrics. This is done :ref:`periodically
     <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.stats_eviction_interval>`
     during the metric flush.
+- area: tap
+  change: |
+    Add :ref:`record_upstream_connection <envoy_v3_api_field_extensions.filters.http.tap.v3.Tap.record_upstream_connection>`
+    to determine whether upstream connection information is recorded in the HTTP buffer trace output.
 - area: quic
   change: |
     Added new option to support :ref:`base64 encoded server ID
