--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -503,5 +503,8 @@ new_features:
   change: |
     Added ``max_downstream_connection_duration_jitter_percentage`` to allow adding a jitter to the max downstream connection duration.
     This can be used to avoid thundering herd problems with many clients being disconnected and possibly reconnecting at the same time.
+- area: access_log
+  change: |
+    Support rate limiting on access log.
 
 deprecated:
