server: implement container-aware CPU detection with cgroup limits
This adds Go-style GOMAXPROCS algorithm to Envoy's CPU detection:
- Combines hardware threads, CPU affinity, and cgroup limits
- Supports both cgroup v1 (cpu.cfs_quota_us) and v2 (cpu.max)
- Uses leaf-only cgroup detection matching Go runtime behavior
- Changes minimum CPU count from 2 to 1 for single-core containers
- Includes comprehensive test suite with filesystem mocking

The implementation improves Envoy's behavior in Kubernetes and Docker
environments where cgroup limits are more restrictive than hardware
thread counts.

Signed-off-by: premnath.nenavath <premnath.nenavath@gomotive.com>

--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -268,8 +268,10 @@ envoy_cc_test(
         "//source/common/common:utility_lib",
         "//source/common/stats:stats_lib",
         "//source/extensions/filters/http/buffer:config",
+        "//source/server:cgroup_cpu_util_lib",
         "//source/server:options_lib",
         "//test/mocks/api:api_mocks",
+        "//test/mocks/filesystem:filesystem_mocks",
         "//test/test_common:environment_lib",
         "//test/test_common:logging_lib",
         "//test/test_common:registry_lib",
