--- a/source/extensions/filters/common/local_ratelimit/BUILD
+++ b/source/extensions/filters/common/local_ratelimit/BUILD
@@ -12,9 +12,7 @@ envoy_cc_library(
     name = "local_ratelimit_lib",
     srcs = ["local_ratelimit_impl.cc"],
     hdrs = ["local_ratelimit_impl.h"],
-    visibility = [
-        "//source/common/access_log:__subpackages__",
-    ],
+    visibility = ["//visibility:public"],
     deps = [
         "//envoy/event:dispatcher_interface",
         "//envoy/event:timer_interface",
