--- a/tools/code_format/config.yaml
+++ b/tools/code_format/config.yaml
@@ -435,6 +435,7 @@ visibility_excludes:
 - source/extensions/clusters/logical_dns/
 - source/extensions/clusters/dns/
 - source/extensions/early_data/BUILD
+- source/extensions/filters/common/local_ratelimit/BUILD
 - source/extensions/filters/http/buffer/BUILD
 - source/extensions/filters/network/common/BUILD
 - source/extensions/filters/network/generic_proxy/interface/BUILD
