--- a/tools/code_format/config.yaml
+++ b/tools/code_format/config.yaml
@@ -137,6 +137,7 @@ paths:
     - source/common/grpc/google_grpc_creds_impl.cc
     - source/server/drain_manager_impl.cc
     - source/common/router/rds_impl.cc
+    - source/common/access_log/access_log_impl.cc
     - source/server/hot_restarting_parent.cc
     - source/common/io/io_uring_worker_impl.cc
     - source/common/event/file_event_impl.cc
