--- a/test/extensions/formatter/xfcc_value/BUILD
+++ b/test/extensions/formatter/xfcc_value/BUILD
@@ -1,5 +1,6 @@
 load(
     "//bazel:envoy_build_system.bzl",
+    "envoy_cc_fuzz_test",
     "envoy_package",
 )
 load(
@@ -23,5 +24,17 @@ envoy_extension_cc_test(
         "//test/mocks/stream_info:stream_info_mocks",
         "//test/test_common:test_runtime_lib",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_fuzz_test(
+    name = "xfcc_value_fuzz_test",
+    srcs = ["xfcc_value_fuzz_test.cc"],
+    corpus = "xfcc_value_corpus",
+    rbe_pool = "6gig",
+    deps = [
+        "//source/extensions/formatter/xfcc_value:config",
+        "//test/mocks/stream_info:stream_info_mocks",
+        "//test/test_common:utility_lib",
     ],
 )
