--- a/tools/code_format/config.yaml
+++ b/tools/code_format/config.yaml
@@ -191,6 +191,7 @@ paths:
     - source/extensions/filters/network/dubbo_proxy
     - source/extensions/filters/network/rbac
     - source/extensions/filters/network/common
+    - source/extensions/filters/network/local_ratelimit
     - source/extensions/filters/network/redis_proxy
     - source/extensions/filters/network/zookeeper_proxy
     - source/extensions/filters/network/ext_authz
