prototype metric vec variants
Signed-off-by: William Zhang <wtzhang23@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -350,5 +350,8 @@ new_features:
     Added a new metric ``db_build_epoch`` to track the build timestamp of the Maxmind geolocation database files.
     This can be used to monitor the freshness of the databases currently in use by the filter.
     See https://maxmind.github.io/MaxMind-DB/#build_epoch for more details.
+- area: dynamic_modules
+  change: |
+    Added support for counters, gauges, histograms, and their vector variants to the dynamic modules API.
 
 deprecated:
