--- a/source/extensions/filters/http/dynamic_modules/BUILD
+++ b/source/extensions/filters/http/dynamic_modules/BUILD
@@ -53,6 +53,7 @@ envoy_cc_extension(
 envoy_cc_library(
     name = "abi_impl",
     srcs = ["abi_impl.cc"],
+    hdrs = ["abi_impl.h"],
     deps = [
         ":filter_lib",
         "//source/common/http:utility_lib",
