change to extension
Signed-off-by: Xuyang Tao <taoxuy@google.com>

--- a/test/common/access_log/BUILD
+++ b/test/common/access_log/BUILD
@@ -40,6 +40,7 @@ envoy_cc_test(
         "//bazel:windows_x86_64": [],  # TODO: fix the windows ANTLR build
         "//conditions:default": [
             "//source/extensions/access_loggers/filters/cel:config",
+            "//source/extensions/access_loggers/filters/local_ratelimit:config",
         ],
     }),
 )
