--- a/source/extensions/stat_sinks/open_telemetry/BUILD
+++ b/source/extensions/stat_sinks/open_telemetry/BUILD
@@ -17,6 +17,8 @@ envoy_cc_library(
         "//envoy/grpc:async_client_interface",
         "//envoy/singleton:instance_interface",
         "//source/common/grpc:async_client_lib",
+        "//source/extensions/common/opentelemetry/sdk/common:sdk_common_lib",
+        "//source/extensions/common/opentelemetry/sdk/metrics:sdk_metrics_lib",
         "//source/extensions/tracers/opentelemetry/resource_detectors:resource_detector_lib",
         "@envoy_api//envoy/extensions/stat_sinks/open_telemetry/v3:pkg_cc_proto",
         "@opentelemetry_proto//:metrics_proto_cc",
@@ -31,6 +33,7 @@ envoy_cc_library(
     deps = [
         "//source/common/common:assert_lib",
         "//source/common/protobuf",
+        "//source/extensions/common/opentelemetry/sdk/metrics:constants_lib",
     ],
 )
 
