--- a/source/extensions/tracers/opentelemetry/BUILD
+++ b/source/extensions/tracers/opentelemetry/BUILD
@@ -41,45 +41,14 @@ envoy_cc_library(
         "-DHAVE_ABSEIL",
     ],
     deps = [
-        ":trace_exporter",
         "//envoy/thread_local:thread_local_interface",
         "//source/common/config:utility_lib",
         "//source/common/tracing:http_tracer_lib",
+        "//source/extensions/common/opentelemetry/exporters/otlp:trace_exporter_lib",
         "//source/extensions/tracers/common:factory_base_lib",
         "//source/extensions/tracers/opentelemetry/resource_detectors:resource_detector_lib",
         "//source/extensions/tracers/opentelemetry/samplers:sampler_lib",
         "@envoy_api//envoy/config/trace/v3:pkg_cc_proto",
-        "@io_opentelemetry_cpp//api",
-        "@opentelemetry_proto//:trace_proto_cc",
-        "@opentelemetry_proto//:trace_service_proto_cc",
-    ],
-)
-
-envoy_cc_library(
-    name = "trace_exporter",
-    srcs = [
-        "grpc_trace_exporter.cc",
-        "http_trace_exporter.cc",
-        "otlp_utils.cc",
-    ],
-    hdrs = [
-        "grpc_trace_exporter.h",
-        "http_trace_exporter.h",
-        "otlp_utils.h",
-        "trace_exporter.h",
-    ],
-    deps = [
-        "//envoy/grpc:async_client_manager_interface",
-        "//envoy/upstream:cluster_manager_interface",
-        "//source/common/grpc:typed_async_client_lib",
-        "//source/common/http:async_client_utility_lib",
-        "//source/common/http:header_map_lib",
-        "//source/common/http:message_lib",
-        "//source/common/http:utility_lib",
-        "//source/common/protobuf",
-        "//source/common/tracing:trace_context_lib",
-        "//source/common/version:version_lib",
-        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@io_opentelemetry_cpp//api",
         "@opentelemetry_proto//:trace_proto_cc",
         "@opentelemetry_proto//:trace_service_proto_cc",
