Add new tests and make code clear to read
Signed-off-by: Leonardo da Mata <ldamata@spotify.com>

--- a/source/extensions/quic/crypto_stream/BUILD
+++ b/source/extensions/quic/crypto_stream/BUILD
@@ -9,6 +9,10 @@ load(
     "envoy_extension_package",
     "envoy_select_enable_http3",
 )
+load(
+    "//bazel/external:quiche.bzl",
+    "envoy_quic_cc_library",
+)
 
 licenses(["notice"])  # Apache 2
 
@@ -16,20 +20,15 @@ licenses(["notice"])  # Apache 2
 
 envoy_extension_package()
 
-envoy_cc_library(
+envoy_quic_cc_library(
     name = "envoy_quic_crypto_server_stream_lib",
-    srcs = envoy_select_enable_http3(["envoy_quic_crypto_server_stream.cc"]),
-    hdrs = envoy_select_enable_http3(["envoy_quic_crypto_server_stream.h"]),
-    visibility = [
-        "//source/common/quic:__subpackages__",
-        "//test:__subpackages__",
-    ],
-    deps = envoy_select_enable_http3([
+    srcs = ["envoy_quic_crypto_server_stream.cc"],
+    hdrs = ["envoy_quic_crypto_server_stream.h"],
+    deps = [
         "//envoy/registry",
         "//source/common/quic:envoy_quic_server_crypto_stream_factory_lib",
         "@envoy_api//envoy/extensions/quic/crypto_stream/v3:pkg_cc_proto",
-    ]),
-    alwayslink = LEGACY_ALWAYSLINK,
+    ],
 )
 
 envoy_cc_extension(
@@ -43,16 +42,11 @@ envoy_cc_extension(
     ]),
 )
 
-envoy_cc_library(
+envoy_quic_cc_library(
     name = "envoy_quic_crypto_client_stream_lib",
-    srcs = envoy_select_enable_http3(["envoy_quic_crypto_client_stream.cc"]),
-    hdrs = envoy_select_enable_http3(["envoy_quic_crypto_client_stream.h"]),
-    visibility = [
-        "//source/common/quic:__subpackages__",
-        "//test:__subpackages__",
-    ],
-    deps = envoy_select_enable_http3([
+    srcs = ["envoy_quic_crypto_client_stream.cc"],
+    hdrs = ["envoy_quic_crypto_client_stream.h"],
+    deps = [
         "//source/common/quic:envoy_quic_client_crypto_stream_factory_lib",
-    ]),
-    alwayslink = LEGACY_ALWAYSLINK,
+    ],
 )
