change the abstract class McpSseSessionState in envoy/http/mcp_sse_stateful_session to SseSessionState in envoy/http/sse_stateful_sesion
Signed-off-by: jue-yin <jueyin.hsl@alibaba-inc.com>

--- a/envoy/http/BUILD
+++ b/envoy/http/BUILD
@@ -276,8 +276,8 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
-    name = "mcp_sse_stateful_session_interface",
-    hdrs = ["mcp_sse_stateful_session.h"],
+    name = "sse_stateful_session_interface",
+    hdrs = ["sse_stateful_session.h"],
     deps = [
         "//envoy/config:typed_config_interface",
         "//envoy/server:factory_context_interface",
