Format doc BUILD file
Signed-off-by: Kateryna Nezdolii <kateryna.nezdolii@gmail.com>

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -33,7 +33,7 @@ filegroup(
             "root/configuration/listeners/network_filters/_include/generic_proxy_filter.yaml",
             "root/configuration/overview/_include/xds_api/oauth-sds-example.yaml",
             "root/configuration/security/_include/sds-source-example.yaml",
-            "root/configuration/http/http_filters/_include/ip-tagging-filter.yaml"
+            "root/configuration/http/http_filters/_include/ip-tagging-filter.yaml",
         ],
     ) + select({
         "//bazel:windows_x86_64": [],
