--- a/test/extensions/http/original_ip_detection/xff/BUILD
+++ b/test/extensions/http/original_ip_detection/xff/BUILD
@@ -17,10 +17,13 @@ envoy_extension_cc_test(
     extension_names = ["envoy.http.original_ip_detection.xff"],
     rbe_pool = "6gig",
     deps = [
+        "//source/common/http:conn_manager_config_interface",
         "//source/common/http:utility_lib",
         "//source/common/network:address_lib",
         "//source/common/protobuf:utility_lib",
         "//source/extensions/http/original_ip_detection/xff:xff_lib",
+        "//test/mocks/http:http_mocks",
+        "//test/mocks/network:network_mocks",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/extensions/http/original_ip_detection/xff/v3:pkg_cc_proto",
     ],
