--- a/.github/workflows/envoy-checks.yml
+++ b/.github/workflows/envoy-checks.yml
@@ -12,6 +12,15 @@ on:
     types:
     - completed
   workflow_dispatch:
+    inputs:
+      request:
+        description: 'Request JSON object (leave default for basic build)'
+        required: false
+        default: '{"run": {"check-build": true, "check-coverage": true, "check-san": true}, "summary": {"title": "Manual run"}}'
+      trusted:
+        description: 'Trusted (true/false)'
+        required: false
+        default: 'true'
 
 concurrency:
   group: >-
@@ -46,8 +55,8 @@ jobs:
     with:
       check-name: checks
       # head-sha: ${{ github.sha }}
-      request: ${{ github.event_name == 'workflow_dispatch' && '{}' || '' }}
-      trusted: ${{ github.event_name == 'workflow_dispatch' && 'true' || '' }}
+  request: ${{ github.event_name == 'workflow_dispatch' && inputs.request || '' }}
+  trusted: ${{ github.event_name == 'workflow_dispatch' && inputs.trusted || '' }}
 
   build:
     secrets:
